# Qt-6-Core

Basics/01 - C++ Basics/01 - main loop/: main.cpp
Basics/01 - C++ Basics/02 - Hello world/: CMakeLists.txt  main.cpp
Basics/01 - C++ Basics/03-Comments/: main.cpp
Basics/01 - C++ Basics/05 - Data types/: main.cpp
Basics/01 - C++ Basics/07 - Enums/: main.cpp
Basics/01 - C++ Basics/08 - Structs/: main.cpp
Basics/01 - C++ Basics/09- Arrays/: main.cpp
Basics/01 - C++ Basics/10 - Arithmetic Operators/: main.cpp
Basics/01 - C++ Basics/11- Assignment operators/: main.cpp
Basics/01 - C++ Basics/12 - Comparison operators/: main.cpp
Basics/01 - C++ Basics/13 - Logical Operators/: main.cpp
Basics/01 - C++ Basics/14 - cout - qInfo/: main.cpp
Basics/01 - C++ Basics/15 - cin/: main.cpp
Basics/01 - C++ Basics/16 - cerr/: main.cpp
Basics/01 - C++ Basics/17 - message logging/: main.cpp
Basics/01 - C++ Basics/18 - getting input values/: main.cpp
Basics/01 - C++ Basics/19 - simple If/: main.cpp
Basics/01 - C++ Basics/20 - If else/: main.cpp
Basics/01 - C++ Basics/21 - Ternary/: main.cpp
Basics/01 - C++ Basics/22 - Switch statement/: main.cpp
Basics/01 - C++ Basics/23 - while - do while/: main.cpp
Basics/01 - C++ Basics/25 - for loop/: main.cpp
Basics/01 - C++ Basics/26- Age calculator example/: main.cpp
Basics/01 - C++ Basics/27 - function/: main.cpp
Basics/01 - C++ Basics/28 - function parameters/: main.cpp
Basics/01 - C++ Basics/29 - Function Flow control/: main.cpp
Basics/01 - C++ Basics/30 - Function Overloading/: main.cpp
(+35 files in other folders)
